# advent2024

./: .gitignore  README.md  pyproject.toml
day01/: puzzle_1.py  puzzle_2.py
day02/: puzzle_1.py  puzzle_2.py
day03/: puzzle_1.py  puzzle_2.py
day04/: puzzle_1.py  puzzle_2.py
day05/: puzzle_1.py  puzzle_2.py
day06/: puzzle_1.py  puzzle_2.py
day07/: puzzle_1.py
utils/: get_data.py
